--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -1170,10 +1170,12 @@ var display = (async function(){
 	chat.appendChild(newDiv);
 	
 	document.getElementById("r" + i).innerHTML = "account address: " + address;
-	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i+1, address, 1).call();
+	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i+1, address).call();
+	for (j=0;j<contract_length;j++){
+	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i+1, address, j).call();
 	console.log(contract_ID1)
 	var newDiv = document.createElement('div');
-	newDiv.id = 'rr'+i;
+	newDiv.id = 'rr'+i + j;
 	chat.appendChild(newDiv);
 	
 	
@@ -1185,9 +1187,9 @@ var display = (async function(){
 	
 	//document.write(contract_ID)
 	console.log(contract_ID1)
-	document.getElementById("rr" + i).innerHTML = "NFT Contract 1: " + contract_ID1;
+	document.getElementById("rr" + i + j).innerHTML = "NFT Contract 1: " + contract_ID1;
 	
-	var tokenID = await contract_bal.methods.tokens_list1xy(i+1, address, 1).call();
+	var tokenID = await contract_bal.methods.tokens_list1xy(i+1, address, j).call();
 	console.log(tokenID)
 	
 	
@@ -1195,7 +1197,7 @@ var display = (async function(){
 	var image = await image_and_name(contract_ID1, tokenID, getImage);
 	//console.log(image);
 	var newDiv = document.createElement('img');
-	newDiv.id = 'rs'+i;
+	newDiv.id = 'rs'+i + j;
 	//newDiv.setAttribute('width', '15%');
 	//newDiv.setAttribute('height', '15%');
 	//newDiv.loading = "lazy";
@@ -1211,7 +1213,7 @@ var display = (async function(){
 	
 			var img = new Image();
             img.src = JSONresult.image
-			img.id = "rs" & i
+			img.id = "rs" & i & j
 			//img.style.width = '15%'
 			//img.style.height = '15%'
 			//img.setAttribute('width', '15%');
@@ -1221,21 +1223,24 @@ var display = (async function(){
 			
 	//document.getElementById("rs" + i).loading = "lazy";
 	//document.getElementById("rs" + i).src = JSONresult.image;
-	document.getElementById("rs" + i).setAttribute('width', '15%');
-	document.getElementById("rs" + i).setAttribute('height', '15%');
+	//document.getElementById("rs" + i).setAttribute('width', '15%');
+	//document.getElementById("rs" + i).setAttribute('height', '15%');
 	}
 	
 	
 	
 	var newDiv = document.createElement('div');
-	newDiv.id = 's'+i;
+	newDiv.id = 's'+i + j;
 	chat.appendChild(newDiv);
 	
-	document.getElementById("s" + i).innerHTML = "NFT Token ID1: " + tokenID;
+	document.getElementById("s" + i + j).innerHTML = "NFT Token ID1: " + tokenID;
 	//document.getElementById("contract_token_id").innerHTML = tokenID;
 	//document.write(account_address[0])
-	
-	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i+1, address, 1).call();
+	 }
+	 
+	var contract_length1 = await contract_bal.methods.token_contracts_list2xyCount(i+1, address).call();
+	for (j=0;j<contract_length;j++){ 
+	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i+1, address, j).call();
 	//document.getElementById("contract_loan").innerHTML = loan_;	
 	//console.log(loan_)
 	var newDiv = document.createElement('div');
@@ -1246,11 +1251,11 @@ var display = (async function(){
 	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	
 	//newBtn.id = 'b' + i;
-	newDiv.id = 't'+i;
+	newDiv.id = 't'+i + j;
 	chat.appendChild(newDiv);
 	//chat.appendChild(newBtn);
 	
-	document.getElementById("t" + i).innerHTML = "NFT Contract 2: " + contract_ID2;
+	document.getElementById("t" + i + j).innerHTML = "NFT Contract 2: " + contract_ID2;
 	//<input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;" onClick="create_obligation()"/>
 	
 	//var term = await contract_bal.methods.loan_term_list(address).call();
@@ -1262,11 +1267,11 @@ var display = (async function(){
 	
 	//document.getElementById("u" + i).innerHTML = "loan due at block " + term;
 	
-	var tokenID2 = await contract_bal.methods.tokens_list2xy(i+1, address, 1).call();
+	var tokenID2 = await contract_bal.methods.tokens_list2xy(i+1, address, j).call();
 	//document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
 	//console.log(obligation)
 	var newDiv = document.createElement('div');
-	newDiv.id = 'v'+i;
+	newDiv.id = 'v'+i + j;
 	chat.appendChild(newDiv);
 	
 	
@@ -1275,7 +1280,7 @@ var display = (async function(){
 	var image1 = image_and_name(contract_ID2, tokenID2, getImage);
 	//console.log(image);
 	var newDiv = document.createElement('img');
-	newDiv.id = 'vs'+i;
+	newDiv.id = 'vs'+i + j;
 	
 	//chat.appendChild(newDiv);
 	function getImage(xhttp){
@@ -1299,9 +1304,10 @@ var display = (async function(){
 	
 	
 	
-	document.getElementById("v" + i).innerHTML = "NFT Token ID2: " + tokenID2;
+	document.getElementById("v" + i + j).innerHTML = "NFT Token ID2: " + tokenID2;
 	//var lender = await contract_bal.methods.lender_list(address).call();
 	//console.log(lender)
+	}
 	var latest = await contract_bal.methods.debt_obligation_listx(i+1, address).call();
 	var newDiv = document.createElement('div');
 	newDiv.id = 'w'+i;
