--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -1155,7 +1155,7 @@ var display = (async function(){
 	
 	var toAdd = document.createDocumentFragment();
 	//for (var i = 0; i<addressCount; i++){
-	for (var i = addressCount; i>0; i--){
+	for (var i = parseInt(addressCount); i>0; i--){
 	var address = await contract_bal.methods.address_list(i).call();
 	console.log("address: " + address);
 	console.log( i);
