--- a/create_nft_swap_form_polygonx.html
+++ b/create_nft_swap_form_polygonx.html
@@ -606,6 +606,11 @@ var abi = [
 				"internalType": "uint256",
 				"name": "num",
 				"type": "uint256"
+			},
+			{
+				"internalType": "uint256",
+				"name": "id",
+				"type": "uint256"
 			}
 		],
 		"name": "withdraw_nft",
@@ -894,30 +899,6 @@ var abi = [
 				"internalType": "address",
 				"name": "",
 				"type": "address"
-			}
-		],
-		"name": "token_contracts_list1x",
-		"outputs": [
-			{
-				"internalType": "contract ERC721",
-				"name": "",
-				"type": "address"
-			}
-		],
-		"stateMutability": "view",
-		"type": "function"
-	},
-	{
-		"inputs": [
-			{
-				"internalType": "uint256",
-				"name": "",
-				"type": "uint256"
-			},
-			{
-				"internalType": "address",
-				"name": "",
-				"type": "address"
 			},
 			{
 				"internalType": "uint256",
@@ -955,30 +936,6 @@ var abi = [
 				"internalType": "uint256",
 				"name": "",
 				"type": "uint256"
-			}
-		],
-		"stateMutability": "view",
-		"type": "function"
-	},
-	{
-		"inputs": [
-			{
-				"internalType": "uint256",
-				"name": "",
-				"type": "uint256"
-			},
-			{
-				"internalType": "address",
-				"name": "",
-				"type": "address"
-			}
-		],
-		"name": "token_contracts_list2x",
-		"outputs": [
-			{
-				"internalType": "contract ERC721",
-				"name": "",
-				"type": "address"
 			}
 		],
 		"stateMutability": "view",
@@ -1048,30 +1005,6 @@ var abi = [
 				"internalType": "address",
 				"name": "",
 				"type": "address"
-			}
-		],
-		"name": "tokens_list1x",
-		"outputs": [
-			{
-				"internalType": "uint256",
-				"name": "",
-				"type": "uint256"
-			}
-		],
-		"stateMutability": "view",
-		"type": "function"
-	},
-	{
-		"inputs": [
-			{
-				"internalType": "uint256",
-				"name": "",
-				"type": "uint256"
-			},
-			{
-				"internalType": "address",
-				"name": "",
-				"type": "address"
 			},
 			{
 				"internalType": "uint256",
@@ -1080,30 +1013,6 @@ var abi = [
 			}
 		],
 		"name": "tokens_list1xy",
-		"outputs": [
-			{
-				"internalType": "uint256",
-				"name": "",
-				"type": "uint256"
-			}
-		],
-		"stateMutability": "view",
-		"type": "function"
-	},
-	{
-		"inputs": [
-			{
-				"internalType": "uint256",
-				"name": "",
-				"type": "uint256"
-			},
-			{
-				"internalType": "address",
-				"name": "",
-				"type": "address"
-			}
-		],
-		"name": "tokens_list2x",
 		"outputs": [
 			{
 				"internalType": "uint256",
@@ -1169,7 +1078,7 @@ var abi = [
 	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-var contract_address = web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
+var contract_address = web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
 
 var contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -1301,7 +1210,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	var contract_address = web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
+	var contract_address = web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
   	
 	
 	var contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1355,7 +1264,7 @@ var acct = (async function(){
 	console.log(amt);
 	console.log(_amt);
 	
- 	//var contract_address1 = web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
+ 	//var contract_address1 = web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
         var _data = new web3.eth.Contract(abi, contract_address).methods.create_debt_obligation(add1x).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
@@ -1589,7 +1498,7 @@ var acct = (async function(){
 	//var add1x = localStorage.getItem("mySharedData");
 	
  	var contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x7e4e8288571f82952e0917afbf3a8718fc428344", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x12df499321aa0a017516ba0d440ab64a9f634d98", nft_id).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
@@ -1613,7 +1522,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
+var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
 var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 var contract_bal = await new web3.eth.Contract(abi, contract_address);
 var totalSupply = await contract_bal.methods.baseURI().call();
@@ -1645,7 +1554,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	var contract_address = web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
+	var contract_address = web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
   	
 	
 	var contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1682,7 +1591,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
+  var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1719,7 +1628,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
+  var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1738,7 +1647,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
+  	var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
   
 	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1778,7 +1687,7 @@ q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
 
 	await window.ethereum.enable();
-  	var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
+  	var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
   	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1831,7 +1740,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
+  	var contract_address = await web3.utils.toChecksumAddress("0x12df499321aa0a017516ba0d440ab64a9f634d98")
   	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
