--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -1287,6 +1287,8 @@ var acct = (async function(){
 	
 	
 function loan_request(){
+
+await window.ethereum.enable();
 localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").value);
 	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
 	localStorage.setItem("NFT_contract2", document.getElementById("NFT_contract2").value);
@@ -1297,13 +1299,13 @@ localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").v
 	var nft_id = localStorage.getItem("NFT_Token_ID1");
 	var loan_amt = localStorage.getItem("NFT_contract2");
 	var loan_term = localStorage.getItem("NFT_Token_ID2");
-	var add1x = localStorage.getItem("mySharedData");
-account_address.push(add1x)
-console.log(account_address[0])
+	//var add1x = localStorage.getItem("mySharedData");
+//account_address.push(add1x)
+//console.log(account_address[0])
 var acct = (async function(){
   	
   //var result = await getAccounts()
-	await window.ethereum.enable();
+	//await window.ethereum.enable();
 	
 	
 	
