--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -1288,7 +1288,7 @@ var acct = (async function(){
 	
 function loan_request(){
 
-await window.ethereum.enable();
+//await window.ethereum.enable();
 localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").value);
 	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
 	localStorage.setItem("NFT_contract2", document.getElementById("NFT_contract2").value);
@@ -1303,7 +1303,7 @@ localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").v
 //account_address.push(add1x)
 //console.log(account_address[0])
 var acct = (async function(){
-  	
+  	await window.ethereum.enable();
   //var result = await getAccounts()
 	//await window.ethereum.enable();
 	
