--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -1433,8 +1433,8 @@ var acct = (async function(){
 
 function image_and_name(){
 
-	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
-	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
+	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract1").value);
+	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID1").value);
 	
 	var nft_k = localStorage.getItem("NFT Contract");
 	var nft_id = localStorage.getItem("NFT Token ID");
