--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -1469,7 +1469,7 @@ function image_and_name(){
             //down.innerHTML = "Image Element Added.";
        }
     };
-    xhttp.open("GET", lnk, true);
+    xhttp.open("POST", lnk, true);
     xhttp.send();
 	
 
