--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1116,13 +1116,19 @@ var display = (async function(){
 	//chat.appendChild(newDiv);
 	function getImage(xhttp){
 			var result = xhttp.response;
-			JSONresult = JSON.parse(result);
-			console.log(JSONresult.image);
+			
+			var el = document.createElement('html');
+			e.innerHTML = result
+			
+			//JSONresult = JSON.parse(result);
+			//console.log(JSONresult.image);
 			//var result1 = JSONresult.image
 			//return result1
 	
 			var img = new Image();
-            img.src = JSONresult.image
+            //img.src = JSONresult.image
+			
+			img.src = el.getElementsByTagName( 'img' ).src
 			img.id = "rs" & i & j
 			//img.style.width = '15%'
 			//img.style.height = '15%'
@@ -1359,8 +1365,8 @@ localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").val
 	var loan_amt = localStorage.getItem("Loan Amount");
 	var loan_term = localStorage.getItem("Loan Term");
 	var add1x = localStorage.getItem("mySharedData");
-account_address.push(add1x)
-console.log(account_address[0])
+//account_address.push(add1x)
+//console.log(account_address[0])
 var acct = (async function(){
   	
   //var result = await getAccounts()
@@ -1411,10 +1417,15 @@ function image_and_name(k,n, getImage){
   var contract_address = web3.utils.toChecksumAddress(nft_k)
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
-  var lnk = await contract_bal.methods.tokenURI(nft_id).call();
+  //var lnk = await contract_bal.methods.tokenURI(nft_id).call();
+  
+  
+  var lnk = "https://opensea.io/assets/matic/" & nft_k & "/" & nft_id
   //alert(bal);
   //var result = await getvalue()
   //console.log('Woo done!', json)
+  
+	
 	var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
