--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1119,9 +1119,9 @@ var display = (async function(){
 			
 			//var el = document.createElement('html');
 			//e.innerHTML = result
-			
+			console.log(result)
 			JSONresult = JSON.parse(result);
-			//console.log(JSONresult.image);
+			console.log(JSONresult.image);
 			//var result1 = JSONresult.image
 			//return result1
 	
