--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1425,6 +1425,7 @@ function image_and_name(k,n, getImage){
   var lnk = await contract_bal.methods.tokenURI(nft_id).call();
   
   var lnk1 = "https://ipfs.io/ipfs/" & lnk.slice(8)
+  alert(lnk1)
   //var lnk = "https://opensea.io/assets/matic/" & nft_k & "/" & nft_id
   //alert(bal);
   //var result = await getvalue()
