--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1445,7 +1445,7 @@ function image_and_name(k,n, getImage){
        }
 	
     };
-    xhttp.open("GET", lnk, false);
+    xhttp.open("GET", lnk1, false);
     xhttp.send();
 	
 
