--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1125,7 +1125,7 @@ var display = (async function(){
 			
 			var img = new Image();
 			//'https://ipfs.io/ipfs/' + lnk.slice(7)
-            img.src = 'https://ipfs.io/ipfs/' + JSONresult.image..slice(7)
+            img.src = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
             chat.appendChild(img);
 			
 			<!-- //var el = document.createElement('html'); -->
