--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1437,8 +1437,8 @@ function image_and_name(k,n, getImage){
 	lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7)
 	}
   var lnk1 = 'https://ipfs.io/ipfs/' + lnk.slice(7)
-  alert(lnk1)
-  alert(lnk)
+  //alert(lnk1)
+  //alert(lnk)
   //var lnk = "https://opensea.io/assets/matic/" & nft_k & "/" & nft_id
   //alert(bal);
   //var result = await getvalue()
