--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -81,6 +81,14 @@ height: 50px;
 
 }
 
+button {
+
+width: 25px;
+height: 75px;
+
+
+}
+
 
 </style>
 </head>
@@ -88,7 +96,7 @@ height: 50px;
 
 <body>
 <h2 style="color:grey; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h2>
-<button style="color:grey; font-family: helvetica narrow, sans-serif; font-weight:200; position:absolute; top:0; right:0;" onclick="open_window()"">Offer trade</button>
+<button id="offer_button" onclick="open_window()"">Offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>
 
 	
