--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -83,9 +83,17 @@ height: 50px;
 
 button {
 
-width: 25px;
-height: 75px;
+width: 100px;
+height: 25px;
+right:0;
 
+}
+
+input {
+
+width: 100px;
+height: 25px;
+right:0;
 
 }
 
