--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -86,7 +86,7 @@ button {
 width: 100px;
 height: 25px;
 left:0;
-color:#7FFFD4;
+color:#FF00FF;
 
 }
 
@@ -95,7 +95,7 @@ input {
 width: 100px;
 height: 25px;
 right:0;
-color:#7FFFD4;
+color:#FF00FF;
 
 }
 
@@ -105,8 +105,8 @@ color:#7FFFD4;
 
 
 <body>
-<h2 style="color:#7FFFD4; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h2>
-<button id="offer_button" onclick="open_window()"">Offer trade</button>
+<h2 style="color:#FF00FF; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h2>
+<button id="offer_button" style="color:#FF00FF; font-family: helvetica narrow, sans-serif; position:absolute; top:0; right:0;" onclick="open_window()"">Offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>
 
 	
