--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -70,14 +70,14 @@ display: none;
   width: 350px;
   height: 70px;
   padding: 10px;
-  border: 1px solid #aaaaaa;
+  border: 2px solid #aaaaaa;
 }
 
 img {
 
 width: 50px;
 height: 50px;
-
+border: 2px solid #aaaaaa;
 
 }
 
@@ -89,6 +89,7 @@ width: 100px;
 height: 25px;
 right:0;
 color:#FF00FF;
+border: 2px solid #aaaaaa;
 
 }
 
@@ -99,7 +100,7 @@ color:#FF00FF;
 
 <body>
 <h2 style="color:#FF00FF; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h2>
-<button style="color:#FF00FF; font-family: helvetica narrow, sans-serif; width: 100px; height: 25px;  position:absolute; top:0; right:0;" onclick="open_window()"">Offer trade</button>
+<button style="color:#FF00FF; font-family: helvetica narrow, sans-serif; width: 100px; height: 25px;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>
 
 	
