--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1630,7 +1630,7 @@ var acct = (async function(){
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 	
 	//var nft_k = localStorage.getItem("NFT Contract");
-	for (var i = 0; i<=k.length; i++){
+	for (var i = 0; i<k.length; i++){
 	var nft_k = k[i]
 	//var nft_id = localStorage.getItem("NFT Token ID");
 	var add1 = add
